# sphinx-revealjs-copycode

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  testing.yml
src/sphinx_revealjs_copycode/: __init__.py
tests/: conftest.py  test_sphinx_revealjs_copycode.py
tests/roots/test-default/: conf.py  index.rst
