[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-revealjs-copycode"
description = "TODO write description or delete"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
keywords = ["TODO", "write", "keywords"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ftnext/sphinx-revealjs-copycode"

[tool.setuptools.dynamic]
version = { attr = "sphinx_revealjs_copycode.__version__" }
