[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-revealjs-copycode"
description = "TODO write description or delete"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
keywords = ["TODO", "write", "keywords"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = ["sphinx-revealjs>1,<3"]

[project.urls]
Repository = "https://github.com/ftnext/sphinx-revealjs-copycode"

[project.optional-dependencies]
dev = [
    "taskipy",
    "autoflake",
    "pyupgrade",
    "black",
    "isort",
    "pytest",
    "pytest-randomly",
    "flake8",
    "mypy",
]

[tool.setuptools.dynamic]
version = { attr = "sphinx_revealjs_copycode.__version__" }

[tool.taskipy.tasks]
pre_test = "task format"
test = "pytest -v"
post_test = "task check"
format = "task format_autoflake && task format_pyupgrade && task format_black && task format_isort"
format_autoflake = "autoflake --in-place --remove-all-unused-imports $(find src tests -name '*.py') setup.py"
format_pyupgrade = "pyupgrade $(find src tests -name '*.py') setup.py"
format_black = "black -l 79 src tests setup.py"
format_isort = "isort --profile black -l 79 src tests setup.py"
check = "task check_flake8 && task check_mypy"
check_flake8 = "flake8 src tests"
check_mypy = "mypy src tests"
